--- a/static/css/stylehome.css
+++ b/static/css/stylehome.css
@@ -2,7 +2,7 @@ h1, div {
     text-align: center;
 }
 body {
-    background-color: aquamarine;
+    background-color: red;
 }
 button {
     background-color: black;
